2008-01-30  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/context.cc:
	* cairomm/context.h: add new has_current_point() API to deal with the fact
	that cairo_get_current_point() changed from a void to a cairo_status_t
	return type, and we don't necessarily want to throw an exception here or it
	could break existing applications.  But this could be reconsidered

2008-01-30  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/xlib_surface.cc:
	* cairomm/xlib_surface.h: add new get_xrender_format() function (new in
	1.5.8) and add missing static create_with_xrender_format() function
	* docs/reference/Doxyfile.in: add CAIRO_HAS_XLIB_XRENDER_SURFACE feature so
	that new xrender API shows up in docs

2008-01-30  Jonathon Jongsma  <jjongsma@gnome.org>

	* configure.in: bump cairo requirement to 1.5.8
	* cairomm/context.cc:
	* cairomm/context.h: add get_path_extents function, new in 1.5.8

2008-01-30  Jonathon Jongsma  <jjongsma@gnome.org>

	* configure.in: enable people with CAIROMM_DEVEL variable set to explicitly
	deisable automated tests
	* m4/ax_boost_unit_test_framework.m4: update to slightly newer boost
	unittest checking scripts

2007-11-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/surface.cc:
	* cairomm/surface.h: add new PsSurface API: set_eps(), restrict_to_level(),
	get_levels(), level_to_string()

2007-11-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/surface.cc:
	* cairomm/surface.h: add Surface::copy_page() and Surface::show_page()

2007-11-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* configure.in: bump version and minimum cairo version so that we can start
	implementing the 1.5.x features

== 1.4.6 ==

2007-11-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* docs/reference/Doxyfile.in: update doxygen config file since my version of
	doxygen now complains that there are obsolete config keys

2007-11-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* NEWS: update news for 1.4.6 release
	* configure.in: bumped version
